fix: made mobile logo visible in max-width selector

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -94,6 +94,7 @@
     }
 
     .mobile-logo {
+        display: block;
         transform: translateX(25px);
     }
 
